# yt_transcriber

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requeriments.txt  requirements.txt
src/audio/: cleaner.py  processor.py
src/cli/: parser.py
src/config/: settings.py
src/transcription/: api_transcriber.py  transcriber.py
src/video/: extractor.py
