[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcriber"
version = "0.1.0"
description = "Download and transcribe YouTube videos"

[project.scripts]
yt-transcriber = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]